--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 	<div class="columns-container">
 		<div class="column-container">
 			<p class="column-header">Even numbers</p>
-			<p class="column-text">The even number list is empty. Generate numbers.</p>
+			<p class="column-text">The list of even numbers is empty.</p>
 			<div id="even-numbers"></div>
 		</div>
 		<div class="column-container">
 			<p class="column-header">Odd numbers</p>
-			<p class="column-text">The odd number list is empty. Generate numbers.</p>
+			<p class="column-text">The list of odd numbers is empty.</p>
 			<div id="odd-numbers"></div>
 		</div>
 	</div>
